<resources>
    <string name="app_name">ToDo List</string>
    <string name="add">Add</string>
    <string name="add_item">Add a new item ...</string>
    <string name="title_activity_edit_item">Edit Item</string>
    <string name="edit_item_label">Your task</string>
    <string name="save_btn">SAVE</string>
    <string name="priority_label">Priority</string>
    <string name="priority_high">High</string>
    <string name="priority_medium">Medium</string>
    <string name="priority_low">Low</string>


</resources>

