<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.gremsy.tuantran.mytodo.EditTaskActivity">
    <LinearLayout
        android:id="@+id/task_title"
        android:layout_alignParentLeft="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/list_image"
            android:layout_width="@dimen/item_image"
            android:layout_height="@dimen/item_image"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/ic_arrow"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/edit_item_label"
            android:id="@+id/edit_item_label"/>
    </LinearLayout>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/editView"
        android:layout_below="@+id/task_title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="@dimen/component_margin"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        />
    <LinearLayout
        android:id="@+id/priority_title"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/editView"
        android:layout_marginTop="@dimen/component_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView

            android:layout_width="@dimen/item_image"
            android:layout_height="@dimen/item_image"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/ic_arrow"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/priority_label" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/priority_selection"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/priority_title"
        android:layout_marginTop="@dimen/component_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RadioGroup
            android:id="@+id/radioPriority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/radioHigh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/priority_high"
                android:onClick="onRadioButtonClicked"
                android:checked="true" />

            <RadioButton
                android:id="@+id/radioMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/priority_medium"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton
                android:id="@+id/radioLow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/priority_low"
                android:onClick="onRadioButtonClicked"/>

        </RadioGroup>
    </LinearLayout>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_btn"
        android:id="@+id/saveButton"
        android:onClick="saveItem"
        android:layout_below="@+id/priority_selection"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/component_margin"/>


</RelativeLayout>
